# neural-channel-estimator

./: .gitignore  Makefile  README.md  pyproject.toml
config/: channel.yaml  model.yaml  system.yaml
data/: README.md  generate.py
docs/: 01_ofdm_numerology_and_configs.md  02_dataset_generator.md  03_baseline_estimators.md  04_residual_cnn.md  05_harness_and_gpu_gates.md  06_onnx_export_and_parity.md  07_tensorrt_engine.md  08_aerial_mapping.md  index.md
estimator/: baselines.py  evaluate.py  export_onnx.py  model.py  train.py
inference/: CMakeLists.txt  README.md  calib.npy  sample_input.npy
inference/src/: buffers.cpp  buffers.h  calibrator.cpp  calibrator.h  main.cpp  npy.h  trt_engine.cpp  trt_engine.h
profiling/: budget.py  latency_report.py  run_nsight.sh
results/: accuracy_vs_quant.md  latency_breakdown.md  nmse_summary.json
scripts/: check_exit_p1.py  check_exit_p2.py  compare_trt_onnx.py  make_calib_npy.py  verify_parity.py
